Update 'backend-tests-go-wnkebffw' component image to: quay.io/rhtap_qe/backend-tests-go-wnkebffw:4c19024897aa10f06534eaa890f2cb9f049def92@sha256:7bf55374a4eecd4af938521febd064b43016dd6d819b9193135dd9a1426cae0c

--- a/components/backend-tests-go-wnkebffw/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-wnkebffw/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-wnkebffw
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-wnkebffw:4c19024897aa10f06534eaa890f2cb9f049def92@sha256:7bf55374a4eecd4af938521febd064b43016dd6d819b9193135dd9a1426cae0c
+          name: container-image
